--- a/NavigationAula/LaunchScreen.storyboard
+++ b/NavigationAula/LaunchScreen.storyboard
@@ -17,13 +17,28 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash Screen" translatesAutoresizingMaskIntoConstraints="NO" id="T4S-Co-taU">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="T4S-Co-taU" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="HKU-n3-moG"/>
+                            <constraint firstItem="T4S-Co-taU" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="Nnb-DO-1fq"/>
+                            <constraint firstAttribute="bottom" secondItem="T4S-Co-taU" secondAttribute="bottom" id="m78-uB-auw"/>
+                            <constraint firstItem="T4S-Co-taU" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="w9i-sf-OwW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Splash Screen" width="414" height="896"/>
+    </resources>
 </document>
